fix(Outcome): add missing background-color variants

--- a/src/styles/abstracts/variables/_outcome.scss
+++ b/src/styles/abstracts/variables/_outcome.scss
@@ -6,7 +6,11 @@ $outcome-themes: (
   light: (
     outcome-text-color: #171b23,
     outcome-icon-color: #637084,
+    outcome-background-color-default: #f8faff,
     outcome-background-color-selected: mix(#ffffff, #5d55fa, 86%),
+    outcome-background-color-success: mix(#ffffff, #27ab83, 85%),
+    outcome-background-color-error: mix(#ffffff, #e12d39, 90%),
+    outcome-background-color-warning: mix(#ffffff, #f0b429, 85%),
     outcome-border-color-default: #e0e2e7,
     outcome-border-color-selected: #bcb9fd,
     outcome-border-color-success: #83ceb7,
@@ -16,7 +20,11 @@ $outcome-themes: (
   dark: (
     outcome-text-color: #f9fafb,
     outcome-icon-color: #637084,
+    outcome-background-color-default: #0e1016,
     outcome-background-color-selected: mix(#000000, #5d55fa, 75%),
+    outcome-background-color-success: mix(#000000, #27ab83, 75%),
+    outcome-background-color-error: mix(#000000, #e12d39, 75%),
+    outcome-background-color-warning: mix(#000000, #f0b429, 85%),
     outcome-border-color-default: #252c3b,
     outcome-border-color-selected: #3a359c,
     outcome-border-color-success: #186b52,
